[package]
name = "fragments-round"
version = "0.1.0"
authors = ["juan@idealabs.network"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
fa-nft = { path = "../fa-nft", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "fa-nft/std"
]
ink-as-dependency = []
